// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio render should render correctly 1`] = `
<Fragment>
  <Text
    isDisabled={false}
    items={Array []}
    onChange={[Function]}
    onSubmit={[Function]}
    value="undefined"
  />
</Fragment>
`;

exports[`Radio render should render correctly placeholder 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="some placeholder"
    variant="single"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Radio render should render correctly with items - isDisabled 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isDisabled={true}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    variant="single"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Radio render should render correctly with items 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    variant="single"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Radio render should render correctly with items and default value 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    variant="single"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`Radio render should render correctly with items and selected value 1`] = `
<Fragment>
  <Component
    aria-label="Select Input"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    variant="single"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="some-value"
    >
      <Radio
        className=""
        id="some-value-0"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label={
          <div>
            Custom value
          </div>
        }
        name="0-radio"
        onChange={[Function]}
        value="some-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="another-value"
    >
      <Radio
        className=""
        id="another-value-1"
        isChecked={true}
        isDisabled={false}
        isValid={true}
        label="Another"
        name="1-radio"
        onChange={[Function]}
        value="another-value"
      />
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="2"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="2"
    >
      <Radio
        className=""
        id="undefined-2"
        isChecked={false}
        isDisabled={false}
        isValid={true}
        label="No value"
        name="2-radio"
        onChange={[Function]}
        value={2}
      />
    </SelectOption>
  </Component>
</Fragment>
`;
